@@ -135,15 +135,12 @@ void
 gnome_icon_list_get_selection (gil)
 	GnomeIconList *gil
     PREINIT:
-	GList * list;
+	GList *list = NULL;
     PPCODE:
 	list = gnome_icon_list_get_selection (gil);
-	if (!list)
-		XSRETURN_EMPTY;
 	for (; list != NULL; list = list->next)
 		/* cast to avoid warning. */
 		XPUSHs (sv_2mortal (newSViv ((gint) list->data)));
-	g_list_free (list);
 
 ##  void gnome_icon_list_focus_icon (GnomeIconList *gil, gint idx) 
 void
