@@ -237,14 +237,12 @@ gnome_icon_theme_list_icons (theme, context=NULL)
 	GnomeIconTheme *theme
 	const char *context
     PREINIT:
-	GList * results;
+	GList *i, *results = NULL;
     PPCODE:
 	results = gnome_icon_theme_list_icons (theme, context);
-	if (!results)
-		XSRETURN_EMPTY;
-	for (; results != NULL; results = results->next) {
-		XPUSHs (sv_2mortal (newSVpv (results->data, PL_na)));
-		g_free (results->data);
+	for (i = results; i != NULL; i = i->next) {
+		XPUSHs (sv_2mortal (newSVpv (i->data, PL_na)));
+		g_free (i->data);
 	}
 	g_list_free (results);
 
