@@ -170,8 +170,8 @@ gnome_program_locate_file (program, domain, file_name, only_if_exists)
 	const gchar *file_name
 	gboolean only_if_exists
     PREINIT:
-	gchar * path;
-	GSList * ret_locations = NULL;
+	gchar *path;
+	GSList *i, *ret_locations = NULL;
     PPCODE:
 	path = gnome_program_locate_file (program, domain, file_name,
 	                                  only_if_exists, &ret_locations);
@@ -181,9 +181,9 @@ gnome_program_locate_file (program, domain, file_name, only_if_exists)
 		g_free (path);
 	}
 
-	for (; ret_locations != NULL; ret_locations = ret_locations->next) {
-		XPUSHs (sv_2mortal (newSVGChar ((gchar*)ret_locations->data)));
-		g_free (ret_locations->data);
+	for (i = ret_locations; i != NULL; i = i->next) {
+		XPUSHs (sv_2mortal (newSVGChar ((gchar *) i->data)));
+		g_free (i->data);
 	}
 
 	g_slist_free (ret_locations);
